Support style_sheet! macro

--- a/style4rs/tests/samples/pseudo.css
+++ b/style4rs/tests/samples/pseudo.css
@@ -14,7 +14,9 @@ p:lang(it) {
     background: yellow;
 }
 
-svg|a {}
+svg|a {
+    background-color: aliceblue;
+}
 
 :not(body) {
     background: #ff0000;
