--- a/style4rs/tests/samples/at_rules.css
+++ b/style4rs/tests/samples/at_rules.css
@@ -35,8 +35,8 @@ utilities;
         p {
             margin-block: 1rem;
             font: 0.9em/1.2 Arial, Helvetica, sans-serif;
-            content: "\hello";
-            content: "\hello";
+            content: "hello";
+            content: "hello";
         }
     }
 }
